Fix: Adjust margin on Prep time bullets to fit on smaller screens. Prevent borders from extending beyond table limits. Adjust padding on small screens.

--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,7 @@ hr {
 
 table {
   width: 100%;
+  table-layout: fixed;
   font-size: 1.3rem;
   border-collapse: collapse;
 }
@@ -199,7 +200,7 @@ td:nth-child(2) {
     height: 0.35rem;
     border-radius: 50%;
     background: black;
-    margin: 0 2.25rem 0 0.5rem;
+    margin: 0 2rem 0 0.5rem;
   }
 
   .instructions ol {
@@ -212,6 +213,14 @@ td:nth-child(2) {
 
   p {
     font-size: 19px;
+  }
+
+  td {
+    padding: 20px 35px;
+  }
+
+  tr:last-child td {
+    padding: 20px 50px 0px 35px;
   }
 }
 
@@ -270,7 +279,7 @@ td:nth-child(2) {
     height: 0.35rem;
     border-radius: 50%;
     background: black;
-    margin: 0 2.25rem 0 0.5rem;
+    margin: 0 2rem 0 0.5rem;
   }
 
   .instructions ol {
@@ -283,6 +292,13 @@ td:nth-child(2) {
 
   p {
     font-size: 19px;
+  }
+
+  td {
+    padding: 20px 35px;
+  }
+  tr:last-child td {
+    padding: 20px 50px 0px 35px;
   }
 }
 
